--- a/src/gui/forms/overviewpage.ui
+++ b/src/gui/forms/overviewpage.ui
@@ -7,7 +7,7 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QLabel" name="labelAlerts">
+    <widget class="QLabel" name="labelContent">
      <property name="visible">
       <bool>true</bool>
      </property>
